feat: 基本的な機能を追加

--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -20,10 +20,10 @@
     <%= form.text_field :url %>
   </div>
 
-  <%# <div>
+  <div>
     <%= form.label :industry_id %>
     <%# <%= form.collection_select :industry_id, Industry.all, :id, :name, prompt: 'Select an industry' %>
-  <%# </div> %>
+  </div>
 
   <%= form.submit %>
 <% end %>
