--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,33 +8,36 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
 
 <body>
     <header>
+
       <% if logged_in? %>
-        <nav>
-          <% if current_user.admin? %>
-            <%= link_to 'ホーム（管理者）', root_path %>
-          <% elsif current_user.owner? && current_user.shop_id %>
-            <%= link_to 'マイショップ', shop_path(current_user.shop_id) %>
-          <% end %>
-          <%= link_to current_user.name, '#' %>
-          <%= button_to 'ログアウト', logout_path, method: :delete %>
-        </nav>
+      <nav>
+        <% if current_user.admin? %>
+          <%= link_to 'ホーム（管理者）', root_path %>
+        <% elsif current_user.owner? && current_user.shop_id %>
+          <%= link_to 'マイショップ', shop_path(current_user.shop_id) %>
+        <% end %>
+
+        <%= link_to current_user.name, '#' %>
+        <%= button_to 'ログアウト', logout_path, method: :delete, class: "btn btn-outline-success" %>
+      </nav>
       <% end %>
+
     </header>
 
-    <% flash.each do |type, message| %>
-      <div class="flash <%= type %>">
-        <%= message %>
-      </div>
-    <% end %>
-
+    <main class="container">
+      <br>
+      <%= render "commons/flash" %>
     <%= yield %>
+    </main>
 
     <footer>
       <!-- フッターコンテンツ -->
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
