--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,26 +1,31 @@
-<h1><%= @shop.name %>のレビューを投稿</h1>
+<div class="fadeIn">
 
-<%= form_with(model: [@shop, @review], local: true) do |form| %>
-  <% if @review.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
-      <ul>
-        <% @review.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
+  <h2><%= @shop.name %>へのご来店ありがとうございます。</h2>
+  <p>友達におすすめしたいなと感じたこと、もっとよくなりそうだと感じたことなど、率直なご感想お待ちしております。</p>
+
+  <%= form_with(model: [@shop, @review], local: true, data: { turbo: false }) do |form| %>
+    <% if @review.errors.any? %>
+      <div id="error_explanation">
+        <h2><%= pluralize(@review.errors.count, "error") %> prohibited this review from being saved:</h2>
+        <ul>
+          <% @review.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <form>
+      <div class="mb-3">
+        <%= form.label :score, '評価' %>
+        <%= form.number_field :score, in: 1..5, required: true, class: "form-control" %>
+      </div>
+      <div class="mb-3">
+        <%= form.label :comments, 'コメント' %>
+        <%= form.text_area :comments, required: true, class: "form-control", placeholder: "ex.店長さんの笑顔が最高だったので、また行きたいと思いました。"%>
+      </div>
+      <%= form.submit 'レビューを投稿', class: "btn btn-outline-success" %>
+    </form>
   <% end %>
 
-  <div>
-    <%= form.label :score, '星の数' %>
-    <%= form.number_field :score, in: 1..5, required: true %>
-  </div>
-
-  <div>
-    <%= form.label :comments, 'コメント' %>
-    <%= form.text_area :comments, required: true %>
-  </div>
-
-  <%= form.submit 'レビューを投稿' %>
-<% end %>
+</div>
