--- a/app/views/reviews/notice.html.erb
+++ b/app/views/reviews/notice.html.erb
@@ -1,9 +1,29 @@
 
 <% if @review.score.between?(1, 3) %>
-  <p>フィードバックありがとうございました。</p>
+  <h2>フィードバックありがとうございました。</h2>
   <p>いただいたフィードバックを元に改善して参ります。</p>
 <% else %>
   <p>レビューありがとうございます!</p>
   <p>よければ以下のリンクから、googleマップの口コミにも評価いただけませんか？</p>
-  <%= button_to 'お店のページへ', @shop.url, method: :get, form: { target: '_blank' } %>
+
+  <div class="mb-3">
+    <%= text_area_tag 'fe_text', @comment, rows: 3, cols: 100, class: 'form-control' %>
+    <%= button_tag 'コピーする', type: 'button', class: 'btn btn-secondary', onclick: 'copyToClipboard()' %>
+  </div>
+
+  <%= button_to 'google口コミのページへ', @shop.url, method: :get, form: { target: '_blank' }, class: "btn btn-outline-success" %>
 <% end %>
+
+<script>
+function copyToClipboard() {
+  var textArea = document.getElementById('fe_text');
+  textArea.select();
+  try {
+    var successful = document.execCommand('copy');
+    var msg = successful ? 'コピーしました' : 'コピーに失敗しました';
+    alert(msg);
+  } catch (err) {
+    console.error('コピーに失敗しました: ', err);
+  }
+}
+</script>
