--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Shop</h1>
+<h1>店舗作成</h1>
 
 <%= render 'form', shop: @shop %>
 
-<%= link_to 'Back', shops_path %>
+<%= link_to '店舗一覧', shops_path %>
