--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,45 +1,87 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>KuchikomiElevator</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+ <head>
+   <title>KuchikomiElevator</title>
+   <meta name="viewport" content="width=device-width,initial-scale=1">
+   <%= csrf_meta_tags %>
+   <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-    <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
-    <%= javascript_include_tag "chartkick" %>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
+   <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+   <%= javascript_importmap_tags %>
+   <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
+   <%= javascript_include_tag "chartkick" %>
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+ </head>
 
-<body>
-    <header>
+ <body class="d-flex flex-column min-vh-100">
+   <%# ヘッダー %>
+   <header class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+     <div class="container">
+       <%# ブランドロゴ %>
+      <span class="navbar-brand">
+        <i class="bi bi-chat-dots text-primary me-1"></i>
+        <i class="bi bi-emoji-smile text-warning me-2"></i>
+        KuchikomiElevator
+      </span>
 
-      <% if logged_in? %>
-      <nav>
-        <% if current_user.admin? %>
-          <%= link_to 'ホーム（管理者）', root_path %>
-        <% elsif current_user.owner? && current_user.shop_id %>
-          <%= link_to 'マイショップ', shop_path(current_user.shop_id) %>
-        <% end %>
+       <% if logged_in? %>
+         <%# ハンバーガーメニュー %>
+         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+           <span class="navbar-toggler-icon"></span>
+         </button>
 
-        <%= link_to current_user.name, '#' %>
-        <%= button_to 'ログアウト', logout_path, method: :delete, class: "btn btn-outline-success" %>
-      </nav>
-      <% end %>
+         <%# ナビゲーションメニュー %>
+         <div class="collapse navbar-collapse" id="navbarNav">
+           <ul class="navbar-nav ms-auto align-items-center">
+             <%# ユーザータイプに応じたリンク %>
+             <li class="nav-item">
+               <% if current_user.admin? %>
+                 <%= link_to root_path, class: "nav-link" do %>
+                   <i class="bi bi-house me-1"></i>ホーム（管理者）
+                 <% end %>
+               <% elsif current_user.owner? && current_user.shop_id %>
+                 <%= link_to shop_path(current_user.shop_id), class: "nav-link" do %>
+                   <i class="bi bi-shop me-1"></i>マイショップ
+                 <% end %>
+               <% end %>
+             </li>
 
-    </header>
+             <%# ユーザー名 %>
+             <li class="nav-item">
+               <span class="nav-link">
+                 <i class="bi bi-person-circle me-1"></i><%= current_user.name %>
+               </span>
+             </li>
 
-    <main class="container">
-      <br>
-      <%= render "commons/flash" %>
-    <%= yield %>
-    </main>
+             <%# ログアウトボタン %>
+             <li class="nav-item ms-2">
+               <%= button_to logout_path, 
+                   method: :delete, 
+                   class: "btn btn-outline-primary btn-sm",
+                   form: { class: "mb-0" } do %>
+                 <i class="bi bi-box-arrow-right me-1"></i>ログアウト
+               <% end %>
+             </li>
+           </ul>
+         </div>
+       <% end %>
+     </div>
+   </header>
 
-    <footer>
-      <!-- フッターコンテンツ -->
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+   <%# メインコンテンツ %>
+   <main class="container flex-grow-1 py-4">
+     <%= render "commons/flash" %>
+     <%= yield %>
+   </main>
+
+   <%# フッター %>
+   <footer class="footer mt-auto py-3 bg-light">
+     <div class="container text-center text-muted">
+       <small>&copy; <%= Time.current.year %> KuchikomiElevator. All rights reserved.</small>
+     </div>
+   </footer>
+
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+ </body>
 </html>
