bugfix: レビューがないとshop一覧に表示されないようになっていたので修正

--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -27,7 +27,7 @@
                </td>
                <td>
                  <small class="text-muted">
-                   <%= shop.latest_review_date.in_time_zone('Tokyo').strftime('%Y年%m月%d日 %H:%M') %>
+                   <%= shop.latest_review_date&.in_time_zone('Tokyo')&.strftime('%Y年%m月%d日 %H:%M') || 'レビューなし' %>
                  </small>
                </td>
                <td>
