--- a/app/views/shops/index.html.erb
+++ b/app/views/shops/index.html.erb
@@ -1,10 +1,12 @@
 <div class="container-fluid">
- <div class="d-flex justify-content-between align-items-center mb-4">
-   <h1>店舗一覧</h1>
-   <%= link_to new_shop_path, class: "btn btn-primary" do %>
-     <i class="bi bi-plus-circle"></i> 新規店舗作成
-   <% end %>
- </div>
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1>店舗一覧</h1>
+    <% if current_user.admin? %>
+      <%= link_to new_shop_path, class: "btn btn-primary" do %>
+        <i class="bi bi-plus-circle"></i> 新規店舗作成
+      <% end %>
+    <% end %>
+  </div>
 
  <div class="card">
    <div class="card-body">
