--- a/app/views/shops/_form.html.erb
+++ b/app/views/shops/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: shop, local: true) do |form| %>
+<%= form_with(model: shop, data: { turbo: false }, local: true) do |form| %>
   <% if shop.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(shop.errors.count, "error") %> prohibited this shop from being saved:</h2>
@@ -19,6 +19,6 @@
       <%= form.label 'google口コミリンク' %>
       <%= form.text_field :url, class: "form-control"%>
     </div>
-    <%= form.submit %>
+    <%= form.submit shop.new_record? ? '作成' : '更新', class: "btn btn-success" %>
     </form>
 <% end %>
