--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -38,9 +38,20 @@
       <%= form.collection_select :language_id, Language.all, :id, :name, {}, class: "form-control" %>
     </div>
 
-    <div class="mt-3">
-      <%= form.submit @user.new_record? ? '作成' : '更新', class: "btn btn-primary" %>
-      <%= link_to '戻る', shop_path(@shop), class: "btn btn-secondary" %>
-    </div>
+  <div class="mt-3">
+    <%= form.submit @user.new_record? ? '作成' : '更新', class: "btn btn-primary" %>
+    <%= link_to '戻る', shop_path(@shop), class: "btn btn-secondary" %>
+    <% unless @user.new_record? %>
+        <%= form_with(model: [@shop, @user], 
+            method: :delete, 
+            local: true, 
+            data: { turbo: false },
+            class: "d-inline") do |f| %>
+          <%= f.submit '削除', 
+              class: "btn btn-danger float-end",
+              data: { confirm: '本当に削除してもよろしいですか？' } %>
+        <% end %>
+      <% end %>
+  </div>
   </form>
 <% end %>
