--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,12 +66,13 @@
 
              <%# ログアウトボタン %>
              <li class="nav-item ms-2">
-               <%= button_to logout_path, 
-                   method: :delete, 
-                   class: "btn btn-outline-primary btn-sm",
-                   form: { class: "mb-0" } do %>
-                 <i class="bi bi-box-arrow-right me-1"></i>ログアウト
-               <% end %>
+                <%= button_to logout_path, 
+                    method: :delete, 
+                    class: "btn btn-outline-primary btn-sm",
+                    form: { class: "mb-0" },
+                    data: { turbo: false } do %>
+                  <i class="bi bi-box-arrow-right me-1"></i>ログアウト
+                <% end %>
              </li>
            </ul>
          </div>
