fix: プロダクト名の変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-   <title>KuchikomiElevator</title>
+   <title>ViralVerse</title>
    <meta name="viewport" content="width=device-width,initial-scale=1">
    <%= csrf_meta_tags %>
    <%= csp_meta_tag %>
@@ -21,7 +21,7 @@
       <span class="navbar-brand">
         <i class="bi bi-chat-dots text-primary me-1"></i>
         <i class="bi bi-emoji-smile text-warning me-2"></i>
-        KuchikomiElevator
+        ViralVerse
       </span>
 
        <% if logged_in? %>
